<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@+id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/newsListFragment"
        android:name="com.example.myapplication.ui.news.NewsListFragment"
        android:label="@string/title_news_list"
        tools:layout="@layout/fragment_news_list">
        <action
            android:id="@+id/actionToNewsFragment"
            app:destination="@id/newsFragment" />
    </fragment>
    <fragment
        android:id="@+id/newsFragment"
        android:name="com.example.myapplication.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news">
        <argument
            android:name="newsId"
            app:argType="string"
            app:nullable="false" />
    </fragment>
    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.myapplication.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
</navigation>
